debug in 12_25 so hard TAT

--- a/shopServer/templates/activeManage.html
+++ b/shopServer/templates/activeManage.html
@@ -185,7 +185,8 @@ $('#myform111').on('submit', function(e) {
             success : function(data) 
             {
                 // $("#myModal").hide();
-                alert("成功添加了一条活动");
+                // alert("成功添加了一条活动");
+                layer.msg("编辑成功....");
                 history.go(0)
                 
             },
