--- a/shopServer/templates/leavingMessage.html
+++ b/shopServer/templates/leavingMessage.html
@@ -35,10 +35,8 @@
 	<div class="row ">
 
 		<div class="col-md-11" style="text-align: center;">
-			<form class="form-inline" action="http://localhost:8000/ordertabalelistJaon/" id="searchForm" method="post">
+			<form class="form-inline" action="http://localhost:8000/leavingMessageSelectAll/" id="searchForm" method="post">
 				<div class="form-group">
-					<label for="exampleInputName2">用户ID:</label>
-					<input type="text" class="form-control" name="orderid" id="orderid" placeholder="用户ID">
 					<label for="exampleInputName2">用户名:</label>
 					<input type="text" class="form-control" id="userid" name="userid" placeholder="用户名">
 					<label for="exampleInputName2">留言状态:</label>
@@ -82,7 +80,7 @@
 
 			</tbody>
 		</table>
-
+		
 		<div class="text-center">
 			<ul id="visible-pages-example"></ul>
 		</div>
@@ -220,37 +218,65 @@
 				var isEmeptySelect = true;
 				var deleLen = []
 				var that = ""
-				console.log("批量删除");
+				var thatAll = []
 				$("[name = checkbox-one]:checkbox").each(function() {
 					if($(this).is(":checked")) {
 						isEmeptySelect = false;
 						that = $(this).parents('tr');
 						var objData = that.attr('guestbookid')
 						deleLen.push(objData)
+						thatAll.push(that)
 					}
 				})
-				deleteOneDataById(deleLen , that)
+				console.log(thatAll)
+				deleteOneDataById(deleLen , thatAll)
+				console.log("&&&&&&&&&&&&&^^^^^^^^^^^^^")
+				console.log(deleLen)
 				if (isEmeptySelect == true) {
 		            console.log("000000");
-		            layer.msg("选择要删除的内容");
+		            layer.msg("选择要标记的内容");
 		        }
 			})
 			
 			// 根据id删除一条数据
 		function deleteOneDataById(objId, ele) {
+			console.log("&&&&&&&&&&&&&8888888888888888888888^^^^^^^^^^^^^")
+			console.log(ele.length)
 			myPost("leavingMessDelete", {
-				orderid: objId
+				data: objId
 			}, function(data) {
 				// 警告,需要加判断,服务器删除成功之后才能移除标签 
 				// 另外删除成功之后 要增加弹框提示
 				if (data.status == "ok") {
-					layer.msg("删除成功");
-					$(ele).remove();
+					layer.msg("操作成功");
+					for(var ssA = 0;ssA< ele.length;ssA++){
+						console.log(ssA)
+						var tdLength = $(ele[ssA]).children("td").length;
+						var bianjiTd = $(ele[ssA]).children("td")[tdLength - 2]
+						$(bianjiTd).text("已读")
+					}
+					
 				} else {
-					layer.msg("删除失败");
+					layer.msg("操作失败");
 				}
 			})
 		}
+		
+		$('#searchForm').on('submit', function(e) {
+			e.preventDefault();
+			$(this).ajaxSubmit({
+				success: function(data) {
+					console.log(data)
+					if (data.status == "ok"){
+						layer.msg(data.message);
+						
+					}else{
+						layer.msg(data.message);
+					}
+
+				}
+			})
+		});
 		
 	</script>
 	{% endblock %}
