--- a/shopServer/templates/login.html
+++ b/shopServer/templates/login.html
@@ -59,7 +59,9 @@
 				
 				<br>
 				<li>
-						<img id="imgclick" style="width:150px;height:50px" src="../static/myfile/code.jpg" alt="" srcset="">
+						
+						<img id="bbb" style="width:150px;height:50px" src="../static/myfile/code.jpg" alt="" srcset="">
+						<label id="imgclick" style="margin:10px 5px 25px 25px;">看不清</label>
 				</li>
 
 
@@ -166,7 +168,7 @@
 	function changeCode() {
 		$.ajax({url:"http://localhost:8000/identificode/" , success:function (result) {
 			console.log(result);			
-			$("#imgclick").attr("src" , "http://localhost:8000/" + result.imgPath + "?aaa=" + Math.random()*35)
+			$("#bbb").attr("src" , "http://localhost:8000/" + result.imgPath + "?aaa=" + Math.random()*35)
 		}});
 	}
 
